--- a/WEB/package.json
+++ b/WEB/package.json
@@ -15,6 +15,7 @@
     "@angular/compiler": "^19.2.9",
     "@angular/core": "^19.2.9",
     "@angular/forms": "^19.2.9",
+    "@angular/localize": "^19.2.9",
     "@angular/platform-browser": "^19.2.9",
     "@angular/platform-browser-dynamic": "^19.2.9",
     "@angular/router": "^19.2.9",
@@ -22,6 +23,7 @@
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
     "bootstrap": "^5.3.6",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
